<resources>
    <string name="app_name">CryptocurrencyApp</string>
    <string name="bitcoin_ticker">Bitcoin Ticker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Logın</string>
    <string name="register">Regıster</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="not_result">Sonuç bulunamadı...</string>
    <string name="refresh">Yenileme Sıklığı(dk)</string>
    <string name="save">Kaydet</string>
    <string name="description">Description</string>
    <string name="hashing_algorithm">Hashing Algoritması</string>
</resources>